# cursor-quality-tricks

./: .gitignore  AGENTS.md  Makefile  README.md  cursor-quality-tricks.pptx  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
library-api/: README.md  crud.py  database.py  library.db  main.py  models.py  requirements-dev.txt  schemas.py
library-api/static/: app.js  index.html  style.css
library-api/tests/: conftest.py  test_api.py  test_crud.py  test_models.py
