[project]
name = "cursor-quality-tricks"
version = "1.0.0"
description = "Tutorial repo for code quality and testing with Cursor"
readme = "README.md"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["library-api"]
exclude = ["library-api/tests", "library-api/static"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008"]

[tool.ruff.format]
quote-style = "double"

[tool.radon.cc]
min = "D"
exclude = ["library-api/tests", "library-api/static"]
total_average = true

[tool.radon.mi]
min = "B"
exclude = ["library-api/tests", "library-api/static"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["library-api/tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["library-api/tests"]
pythonpath = ["library-api"]
addopts = "-v"
